# screen-translate

./: .gitignore  Cargo.toml  README.md  build.rs  config.example.toml  installer.iss  start-libretranslate.bat
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: index.html  package-lock.json  package.json  vite.config.js
docs/src/: App.jsx  index.css
docs/src/components/: GlassIcons.css  GradientText.css  TextType.css
macos/: Info.plist  com.amaralkaff.screen-translate.plist
scripts/: create-macos-bundle.sh
src/: clipboard.rs  config.rs  main.rs  server.rs  translator.rs  tray.rs  updater.rs
src/platform/: macos.rs  mod.rs  windows.rs
